Archive2/5f/6e509e4077fb31/output
main.cpp: In member function 'int C<T>::test2()':
main.cpp:19:20: error: 'class A' has no member named 'size'
         return vec.size();  // error: 'class A' has no member named 'size'
                    ^
